<resources>
    <string name="app_name">Train</string>
    <string name="service">service</string>
    <string name="data">data</string>
    <string name="preference">preference</string>
    <string name="content">content</string>
    <string name="database">database</string>
    <string name="file">file</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="normal_bind">NORMAL-BIND</string>
    <string name="aidl_bind">AIDL-BIND</string>
    <string name="unbind">unbind</string>
    <string name="search">search</string>
    <string name="delete">delete</string>
    <string name="insert">insert</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="network">network</string>
    <string name="douban">network</string>
    <string name="volley">Volley</string>
    <string name="retrofit">retrofit</string>
    <string name="original">Original</string>
    <string name="login">login</string>
    <string name="input_password">please input password</string>
    <string name="input_username">please input username</string>
    <string name="scan">scan</string>
    <string name="md">md</string>
    <string name="echart">echart</string>
    <string name="touch_event">touch_event</string>
    <string name="qr">qr</string>
    <string name="screenshot">screenshot</string>
    <string name="drag">drag</string>
    <string name="navigation_view_header_title">Mine</string>
    <string name="service_name">training</string>
    <string name="notification_listen">notification_listen</string>
    <string name="show">show</string>
    <string name="authorize">authorize</string>
    <string name="list">list</string>
    <string name="active_notification_count_zero">no_notification</string>
    <string name="message">message</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <plurals name="active_notification_count_nonzero">
        <item quantity="one">%d active notification</item>
        <item quantity="other">%d active notifications</item>
    </plurals>
</resources>
