<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_username"
        style="@style/MyEditTextStyle"
        android:hint="@string/input_username"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_password"
        style="@style/MyEditTextStyle"
        android:hint="@string/input_password"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_login"
        style="@style/MyBtnStyle"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_display"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/tv_display_selector"
        android:gravity="start"
        android:hint="展示数据"
        android:padding="10dp" />

    <Button
        android:id="@+id/brn_get"
        style="@style/MyBtnStyle"
        android:text="GET请求" />
</LinearLayout>